--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -58,3 +58,24 @@ body {
 .null-class {
   background-color: #bafcb4;
 }
+
+.resetButton {
+  background-color: #b1f2e3;
+  margin-bottom: 1%;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  width: 501px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.reset-class {
+  margin-top: 1px;
+  background-color: #b1f2e3;
+  font-size: 20px;
+  font-weight: bold;
+  border: 0px;
+}
+
+.reset-class:focus {outline:0;}
